Content Shift Fixes

--- a/styles/source/home.scss
+++ b/styles/source/home.scss
@@ -106,6 +106,18 @@
             flex-direction: column;
         }
 
+        .image-wrap {
+            position: relative;
+            margin: 20px 0;
+
+            img {
+                position: absolute;
+                left: 0;
+                width: 100%;
+                height: 100%;
+            }
+        }
+
         a {
             color: $color-text-link;
         }
