--- a/styles/source/single.scss
+++ b/styles/source/single.scss
@@ -22,9 +22,10 @@
     .featured-image {
         position: relative;
         margin-bottom: 50px;
-        min-height: 200px;
+        padding-bottom: 56.25%;
 
         img {
+            position: absolute;
             width: 100%;
             height: 100%;
             object-fit: cover;
